--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -42,7 +42,8 @@ $(function(){
 				$form.postJSON('/api/users',{
 					name: this.name.trim(),
 					email: email,
-					passwd: CryptoJS.SHA1(email+':'+this.password1).toString()
+					passwd: this.password1
+					// passwd: CryptoJS.SHA1(email+':'+this.password1).toString()
 				},function (err, r) {
 					if (err) {
 						return $form.showFormError(err);
