--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -4,14 +4,12 @@
 	<meta charset="utf-8">
 	<title>登陆 - Awesome Python Webapp</title>
 	<link rel="stylesheet" href="/static/css/uikit.min.css">
-    <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
-    <link rel="stylesheet" href="/static/css/awesome.css"/>
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/sha1.min.js"></script>
-    <script src="/static/js/uikit.min.js"></script>
-    <script src="/static/js/sticky.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
-    <script src="/static/js/awesome.js"></script>
+	<link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
+	<script src="/static/js/jquery.min.js"></script>
+	<script src="/static/js/sha1.min.js"></script>
+	<script src="/static/js/uikit.min.js"></script>
+	<script src="/static/js/vue.min.js"></script>
+	<script src="/static/js/awesome.js"></script>
 	<script>
 		$(function() {
 			var vmAuth = new Vue({
@@ -44,13 +42,13 @@
 </head>
 <body class="uk-height-1-1">
 	<div class="uk-vertical-align uk-text-center uk-height-1-1">
-		<div class="uk-vertical-middle" style="width: 320px">
+		<div class="uk-vertical-align-middle" style="width: 320px">
 			<p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">Awesome Python Webapp</a></p>
 			<form id="vm" v-on="submit: submit" class="uk-panel uk-panel-box uk-form">
 				<div class="uk-alert uk-alert-danger uk-hidden"></div>
 				<div class="uk-form-row">
 					<div class="uk-form-icon uk-width-1-1">
-						<i class="uk-icon-envelope-0"></i>
+						<i class="uk-icon-envelope-o"></i>
 						<input v-model="email" name="emal" type="text" placeholder="电子邮件" maxlength="50" class="uk-width-1-1 uk-form-large">
 					</div>
 				</div>
@@ -61,7 +59,7 @@
 					</div>
 				</div>
 				<div class="uk-form-row">
-					<button type="submit" class="uk-width-1-1 uk-button ui-button-primary uk-button-large">
+					<button type="submit" class="uk-width-1-1 uk-button uk-button-primary uk-button-large">
 						<i class="uk-icon-sign-in"></i>登陆
 					</button>
 				</div>
