--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -13,7 +13,7 @@
 	<script>
 		$(function() {
 			var vmAuth = new Vue({
-				el: '#vm'
+				el: '#vm',
 				data: {
 					email: '',
 					passwd: ''
@@ -49,7 +49,7 @@
 				<div class="uk-form-row">
 					<div class="uk-form-icon uk-width-1-1">
 						<i class="uk-icon-envelope-o"></i>
-						<input v-model="email" name="emal" type="text" placeholder="电子邮件" maxlength="50" class="uk-width-1-1 uk-form-large">
+						<input v-model="email" name="email" type="text" placeholder="电子邮件" maxlength="50" class="uk-width-1-1 uk-form-large">
 					</div>
 				</div>
 				<div class="uk-form-row">
