--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -21,22 +21,22 @@ $(function(){
 			submit: function(event) {
 				event.preventDefault();
 				var $form = $('#vm');
-				// if (!this.name.trim()) {
-				// 	return $form.showFormError('请输入名字')
-				// }
-				// if (!validateEmail(this.email.trim().toLowerCase())) {
-				// 	return $form.showFormError('请输入正确的Email地址');
-				// }
-				// if (this.password1.length < 6) {
-				// 	return $form.showFormError('口令长度至少为6个字符');
-				// }
-				// if (this.password1 !== this.password2) {
-				// 	return $form.showFormError('两次输入口令不一致');
-				// }
+				if (!this.name.trim()) {
+					return $form.showFormError('请输入名字')
+				}
+				if (!validateEmail(this.email.trim().toLowerCase())) {
+					return $form.showFormError('请输入正确的Email地址');
+				}
+				if (this.password1.length < 6) {
+					return $form.showFormError('口令长度至少为6个字符');
+				}
+				if (this.password1 !== this.password2) {
+					return $form.showFormError('两次输入口令不一致');
+				}
 
-				this.name = 'fan.yang';
-				this.email = 'fan.yang0522@foxmail.com';
-				this.password1 = '123456';
+				// this.name = 'fan.yang';
+				// this.email = 'fan.yang0522@foxmail.com';
+				// this.password1 = '123456';
 
 				var email = this.email.trim().toLowerCase();
 				$form.postJSON('/api/users',{
