--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -20,9 +20,9 @@ function initVM(blog) {
 						$form.showFormError(err);
 					}
 					else {
-						return location.assign('/api/blogs/'+r.id);
+						// return location.assign('/api/blogs/'+r.id);
+						return location.assign('/blog/'+r.id);
 					}
-
 				});
 			}
 		}
