--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -41,7 +41,7 @@
                 <li><a target="_blank" href="http://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000"><i class="uk-icon-book"></i> 教程</a></li>
                 <li><a target="_blank" href="https://github.com/michaelliao/awesome-python3-webapp"><i class="uk-icon-code"></i> 源码</a></li>
                 {% if __user__ and __user__.admin %}
-                     <li><a target="_self" href="/manage/blogs/create"><i class="uk-icon-code"></i> 编辑日志</a></li>
+                     <li><a target="_self" href="/manage/blogs"><i class="uk-icon-edit"></i> 管理</a></li>
                 {% endif %}
             </ul>
             <div class="uk-navbar-flip">
