--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -95,7 +95,7 @@ $(function(){
 		</tbody>
 	</table>
 
-	<div v-component="pagination" v-width="page"></div>
+	<div v-component="pagination" v-with="page"></div>
 </div>
 
 {% endblock %}
