--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -20,8 +20,8 @@ function initVM(blog) {
 						$form.showFormError(err);
 					}
 					else {
-						// return location.assign('/api/blogs/'+r.id);
-						return location.assign('/blog/'+r.id);
+						return location.assign('/manage/blogs');
+						// return location.assign('/blog/'+r.id);
 					}
 				});
 			}
