--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -18,7 +18,7 @@ function initVM(data) {
 			},
 			delete_blog: function (blog) {
 				if (confirm('确认要删除"' + blog.name +'"? 删除后不可恢复！')) {
-					postJSON('/api/blogs/' + blog.id + '/delete', function (err, r) {
+					postJSON('/api/blogs/' + blog.id + '/delete', blog,function (err, r) {
 						if (err) {
 							return alert(err.message || err.error || err);
 						}
