--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -22,7 +22,8 @@ function initVM(data) {
 						if (err) {
 							return alert(err.message || err.error || err);
 						}
-						refresh();
+						// refresh();
+						return location.assign('/manage/blogs');
 					});
 				}
 			}
