--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -86,10 +86,9 @@ $(function() {
                 </div>
             </article>
         </li>
-        {% else %}
-        <p>还没有人评论...</p>
-        {% endfor %}
+        {% endfor%}
     </ul>
+    <!-- <div v-component="pagination" v-with="{{ page }}"></div> -->
 
 </div>
    <div class="uk-panel uk-panel-box">
